[gd_scene load_steps=8 format=3 uid="uid://dvck6t2ibbi1g"]

[ext_resource type="Theme" uid="uid://c5d7hpdy4qaq6" path="res://Themes/testtheme.tres" id="1_n1fuj"]
[ext_resource type="Script" path="res://Scripts/QuestionMenu.gd" id="2_noy17"]
[ext_resource type="Script" path="res://Scripts/ClickableAnswers.gd" id="3_mm15g"]
[ext_resource type="ButtonGroup" uid="uid://dcd6gx17fu3t7" path="res://Themes/button_group2.tres" id="4_wxvqd"]
[ext_resource type="ButtonGroup" uid="uid://deo1i7r2xmtm7" path="res://Themes/button_group1.tres" id="5_t7kx5"]
[ext_resource type="Script" path="res://Scripts/barmovement.gd" id="6_oglkf"]
[ext_resource type="Script" path="res://Scripts/question1attempt.gd" id="7_alq20"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="QuestionMenu" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1112.0
offset_bottom = -608.0
theme = ExtResource("1_n1fuj")
script = ExtResource("2_noy17")

[node name="QuestionBox" type="Panel" parent="QuestionMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 268.0
offset_top = 392.0
offset_right = 844.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProposA" type="Panel" parent="QuestionMenu/QuestionBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = 9.0
offset_right = -8.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProposB" type="Panel" parent="QuestionMenu/QuestionBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 9.0
offset_right = 288.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProposC" type="Panel" parent="QuestionMenu/QuestionBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = 59.0
offset_right = -8.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProposD" type="Panel" parent="QuestionMenu/QuestionBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 59.0
offset_right = 288.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 0

[node name="ClickableAnswers" type="Control" parent="QuestionMenu/QuestionBox"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_mm15g")

[node name="CheckButton" type="CheckButton" parent="QuestionMenu/QuestionBox/ClickableAnswers"]
visible = false
layout_mode = 0
offset_top = 97.0
offset_right = 280.0
offset_bottom = 137.0
button_group = ExtResource("4_wxvqd")

[node name="CheckButton2" type="CheckButton" parent="QuestionMenu/QuestionBox/ClickableAnswers"]
visible = false
layout_mode = 0
offset_left = 296.0
offset_top = 97.0
offset_right = 576.0
offset_bottom = 137.0
button_group = ExtResource("5_t7kx5")

[node name="CheckButton3" type="CheckButton" parent="QuestionMenu/QuestionBox/ClickableAnswers"]
visible = false
layout_mode = 0
offset_top = 147.0
offset_right = 280.0
offset_bottom = 187.0
button_group = ExtResource("5_t7kx5")

[node name="CheckButton4" type="CheckButton" parent="QuestionMenu/QuestionBox/ClickableAnswers"]
visible = false
layout_mode = 0
offset_left = 296.0
offset_top = 147.0
offset_right = 576.0
offset_bottom = 187.0
button_group = ExtResource("4_wxvqd")

[node name="BarAnswerSliders" type="Panel" parent="QuestionMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 864.0
offset_top = 392.0
offset_right = 1088.0
offset_bottom = 579.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("6_oglkf")

[node name="ProgressBar" type="ProgressBar" parent="QuestionMenu/BarAnswerSliders"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 48.0
offset_bottom = 168.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="QuestionMenu/BarAnswerSliders"]
layout_mode = 0
offset_left = 69.0
offset_top = 32.0
offset_right = 101.0
offset_bottom = 168.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="QuestionMenu/BarAnswerSliders"]
layout_mode = 0
offset_left = 122.0
offset_top = 32.0
offset_right = 154.0
offset_bottom = 168.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="QuestionMenu/BarAnswerSliders"]
layout_mode = 0
offset_left = 175.0
offset_top = 32.0
offset_right = 207.0
offset_bottom = 168.0
fill_mode = 3
show_percentage = false

[node name="TimerPanel" type="Panel" parent="QuestionMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 28.8
anchor_right = 28.8
offset_left = -206.0
offset_top = 40.0
offset_right = -26.0
offset_bottom = 152.0
grow_horizontal = 0
script = ExtResource("7_alq20")

[node name="CountDown" type="Label" parent="QuestionMenu/TimerPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -118.0
offset_top = 24.0
offset_right = -62.0
offset_bottom = 82.0
grow_horizontal = 0
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="QuestionMenu/TimerPanel"]
process_callback = 0
one_shot = true

[connection signal="timeout" from="QuestionMenu/TimerPanel/Timer" to="QuestionMenu/BarAnswerSliders" method="_on_timer_timeout"]
